--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ button:active {
     justify-content: space-evenly;
 }
 .draw-area div {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.9);
 
     /* 100 divided by size of grid gives percent for flex basis */
     flex-basis: 6.25%;
